@@ -7,6 +7,9 @@ cdebconf (0.134) UNRELEASED; urgency=low
     (Closes: #487691)
   * Use a dynamically allocated rope in strexpand().
     (Closes: #496093)
+  * Increase extra fd numbers by 30 in confmodule_run().
+    This is necessary as the new method of switching from /dev/console to the
+    real device open more file descriptors in the process space.
 
   [ Colin Watson ]
   * When receiving a new template with DATA, ensure that the corresponding
